--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -27,6 +27,7 @@ $GreyColor:#859196;
 
 .nav-bg {
     background: rgba(0, 0, 0, 0.95);
+    height: 10vh;
     position: fixed;
     top: 0;
     left: 0;
