--- a/CSS/_footer.scss
+++ b/CSS/_footer.scss
@@ -43,6 +43,13 @@ footer {
             padding: 0;
             border-radius: 50%;
             font-size: 20px;
+            transition: .3s;
+
+            &:hover {
+                background: #6dc2347a;
+                box-shadow: 0px 5px 30px 3px #6dc234,
+                    inset 0px -3px 0 #6dc234;
+            }
         }
     }
 }
