--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -8,6 +8,10 @@ $GreyColor:#859196;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .burger {
     height: 20px;
     display: flex;
@@ -51,12 +55,39 @@ a {
     color: white;
     text-transform: uppercase;
     font-size: .9rem;
+    position: relative;
     letter-spacing: 1px;
     font-weight: 600;
     transition: .5s;
 
+    .arrow {
+        margin-left: 5px;
+        animation: arrow 1.5s linear infinite;
+    }
+
     &:hover {
         background: #438119;
+        transform: scale(.96);
+    }
+
+    &:hover .arrow {
+        animation: none;
+    }
+
+}
+
+@keyframes arrow {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateX(30px);
+        opacity: 0;
     }
 }
 
@@ -95,22 +126,33 @@ header {
         ul {
             display: flex;
             list-style: none;
-            width: 30%;
+            width: 40%;
             justify-content: space-between;
 
             a {
                 color: $GreyColor;
                 letter-spacing: 1px;
                 transition: .5s;
+                border-bottom: 1px solid $PrimaryColor;
+                padding: 8px 12px;
+
 
                 &:hover {
                     color: $PrimaryColor;
+                    border-radius: 5px;
+                    color: white;
+                    background-color: #6dc234c9;
                 }
             }
 
             a.active {
                 color: $PrimaryColor;
                 font-weight: 600;
+                padding: 8px 12px;
+                border-radius: 5px;
+                color: white;
+                background-color: $PrimaryColor;
+                border-bottom: 1px solid $PrimaryColor;
             }
         }
     }
